Updated logback file and props